# jax-prng-repro

./: .gitignore  CONTRIBUTING.md  README.md  TUTORIAL.md  pyproject.toml  verify_setup.py
.github/workflows/: test.yml
examples/: checkpoint_explained.py  complete_flow.py  data_explained.py  hashing_explained.py  jax_prng_tutorial.py  model_explained.py  pitfalls_and_best_practices.py  prng_pattern.py  reproducibility_basics.py  using_the_project.md
src/jpr/: __init__.py  checkpoint.py  compare.py  data.py  hashing.py  model.py  rng.py  run_repro.py
tests/: test_repro.py
